--- a/20260128.md
+++ b/20260128.md
@@ -51,8 +51,14 @@ Console.WriteLine(x);
 
 [ugrás a tetejére](#ez-egy-cimsor)
 
-
 ## Rovásírás
 
-&#x10C80;
+[Betűtipus letöltése](https://fonts.google.com/noto/specimen/Noto+Sans+Old+Hungarian)
 
+Használat: .ttf fájlon 2 katt -> lokálisan a számítógépedre telepíti a betűkészletet
+
+<div style="font-family: 'Noto Sans Old Hungarian'">
+&#x10C80;&#x10C81;&#x10C82;&#x10C83;&#x10C84;
+
+&#x10CA5;&#x10C90;
+</div>
